Add TZ FIFs to the build process.
Signed-off-by: Brian Dominy <brian@oddchange.com>

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -3,8 +3,6 @@
 # Game specific Makefile extensions
 #
 
-PLATFORM := wpc
-
 MACHINE_FILE := tz.md
 
 MACHINE_SCHEDULE := $(M)/tz.sched
@@ -78,3 +76,6 @@ GAME_FSMS = shot.fsm
 
 FIF_SRCS += images/cow.fif images/spiral.fif images/mborder.fif
 
+FIF_SRCS += $(M)/ballborder.fif $(M)/brianhead.fif $(M)/city.fif \
+	$(M)/coinstack.fif $(M)/hitcher.fif $(M)/oldcar.fif \
+	$(M)/pyramid.fif $(M)/robot.fif
