Many native mode timing improvements:
* Add support for 1ms callbacks in simulator, to update hardware
irrespective of the IRQ/FIRQ.
* Add a watchdog function that will reset in 64ms if it is not
continually kicked.
* Add hooks for simulation of the zerocross circuitry.
* Bump elapsed time even when IRQ is disabled.
* Generate FIRQ at 60Hz.

Signed-off-by: Brian Dominy <brian@oddchange.com>

--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -16,7 +16,7 @@ HOST_LFLAGS += -pg
 HOST_LIBS += -lpth
 
 # Additional object files to be linked into the kernel region
-KERNEL_OBJS += $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o
+KERNEL_OBJS += $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o $(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o
 
 # When using the curses UI (default for now)
 CFLAGS += -DCONFIG_UI -DCURSES
