--- a/machine/afm/Makefile
+++ b/machine/afm/Makefile
@@ -48,7 +48,7 @@ PINMAME_OTHER_ROMS = afm_s*.l1
 # Object files exported by this game
 #
 
-GAME_OBJS = righthole.o lefthole.o
+GAME_PAGED_OBJS = righthole.o lefthole.o afm_leff.o misc.o
 
 GAME_INCLUDES =
 
