Add idle_every_100ms and idle_every_second events. These can be hooked instead of the normal idle event for periodic tasks that don't need to run frequently.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -7,6 +7,7 @@ SCHED_OBJ := $(SCHED_SRC:.c=.o)
 # the machine type at all.
 KERNEL_BASIC_OBJS += $(if $(CONFIG_ANIMATION), kernel/animation.o)
 KERNEL_BASIC_OBJS += $(if $(CONFIG_DMD), kernel/frame.o)
+KERNEL_BASIC_OBJS += kernel/idle.o
 KERNEL_BASIC_OBJS += kernel/list.o
 KERNEL_BASIC_OBJS += kernel/misc.o
 KERNEL_BASIC_OBJS += kernel/puts.o
