Move TZ attract mode out of the system page.

--- a/machine/tz/Makefile
+++ b/machine/tz/Makefile
@@ -61,7 +61,7 @@ PINMAME_OTHER_ROMS = tzu*.rom
 #
 
 GAME_OBJS = clock.o magnet.o sling.o jets.o autofire.o gumball.o \
-	rampdiv.o amode.o lock.o door.o ballsave.o
+	rampdiv.o lock.o door.o ballsave.o
 
 GAME_TEST_OBJS = clocktest.o gumball_test.o magtest.o powerball_test.o
 
@@ -70,7 +70,7 @@ GAME_INCLUDES =
 GAME_PAGED_OBJS = lanes.o leftramp.o skill.o deadend.o camera.o \
 	config.o rightramp.o hitch.o piano.o rocket.o slot.o greed.o \
 	mpf.o powerball.o clocktarget.o vmode.o deffs.o bonus.o star.o \
-	multiball.o loop.o sssmb.o chaosmb.o leffs.o
+	multiball.o loop.o sssmb.o chaosmb.o leffs.o amode.o
 
 GAME_FSMS = shot.fsm
 
