--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -38,19 +38,25 @@ endif
 CFLAGS += -O2 -fomit-frame-pointer -fstrength-reduce -frerun-loop-opt -Wunknown-pragmas -foptimize-sibling-calls -fstrict-aliasing -fregmove -fgcse-after-reload -fgcse-sm -fgcse-las -ffreestanding
 # TODO : should -funroll-loops be given?
 
-KERNEL_HW_OBJS += $(P)/div10.o $(P)/main.o $(P)/task.o $(P)/vector.o
+KERNEL_HW_OBJS += $(P)/div10.o
+KERNEL_HW_OBJS += $(P)/main.o
+KERNEL_HW_OBJS += $(P)/task.o
+KERNEL_HW_OBJS += $(P)/vector.o
 
 KERNEL_SW_OBJS += $(P)/malloc.o
 
-KERNEL_ASM_OBJS += $(P)/dmd.o
-KERNEL_ASM_OBJS += $(P)/farcall.o
-KERNEL_ASM_OBJS += $(P)/task_6809.o
-KERNEL_ASM_OBJS += $(P)/start.o
-KERNEL_ASM_OBJS += $(P)/bitmap.o
+KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/bitmap.o)
+KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/dmd.o)
 KERNEL_ASM_OBJS += $(P)/dot.o
+KERNEL_ASM_OBJS += $(P)/farcall.o
+KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/shadow.o)
+KERNEL_ASM_OBJS += $(P)/start.o
+KERNEL_ASM_OBJS += $(P)/task_6809.o
 
 COMMON_BASIC_OBJS += $(if $(CONFIG_PIC), $(P)/math.o)
 
 CALLSET_FLAGS += -D platform/wpc
 
+# The math code must be compiled in 16-bit mode, since it interfaces
+# to the system libraries which expect this.
 $(P)/math.o : INT_CFLAGS=-mint16
