Initial changes to break out the CPU config from the platform config.
cpu/m6809/Makefile should contain common definitions for all 6809-basd platforms.

--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -2,6 +2,10 @@
 # Root directory for the platform files
 P := platform/wpc
 
+# Common 6809 configuration
+CPU := m6809
+include cpu/$(CPU)/Makefile
+
 # Subplatform support
 # Eventually, this section will contain conditionals for building on the
 # different WPC variations.  For now, all of these are mandatory though.
@@ -15,43 +19,15 @@ CONFIG_ANIMATION ?= $(CONFIG_DMD)
 # 1. -Wno-format is to not check format strings, because we define those
 # differently than ANSI C does (e.g. look at sprintf()).
 INT_CFLAGS = -mint8
-CFLAGS = $(INT_CFLAGS) -DHAVE_FASTRAM_ATTRIBUTE -DHAVE_NVRAM -mdirect -DCONFIG_PLATFORM_WPC -mwpc -fno-builtin -DCONFIG_PINMAME -DCONFIG_BIG_ENDIAN -mcode-section=.text -mdata-section=.text -mbss-section=ram -Wno-format
-ifneq ($(GCC_VERSION),3.4.6)
-SOFTREG_OPTIONS := -msoft-reg-count=4 -DSOFT_REG_COUNT=4
-endif
+CFLAGS += $(INT_CFLAGS) -DHAVE_FASTRAM_ATTRIBUTE -DHAVE_NVRAM -mdirect -DCONFIG_PLATFORM_WPC -mwpc -fno-builtin -DCONFIG_PINMAME -DCONFIG_BIG_ENDIAN -mcode-section=.text -mdata-section=.text -mbss-section=ram -Wno-format
 
-# Optional CFLAGS based on configuration options
-
-# Save assembler files if needed for debugging the 6809 compiler.
-ifeq ($(SAVE_ASM),y)
-CFLAGS += -save-temps
-endif
-
-# Turn on compiler debug.  This will cause a bunch of compiler
-# debug files to get written out during every phase of the build.
-# This is really only needed for debugging the 6809 compiler.
-ifeq ($(DEBUG_COMPILER),y)
-CFLAGS += -da -dA
-endif
-
-# Optimization flags
-CFLAGS += -O2 -fomit-frame-pointer -fstrength-reduce -frerun-loop-opt -Wunknown-pragmas -foptimize-sibling-calls -fstrict-aliasing -fregmove -fgcse-after-reload -fgcse-sm -fgcse-las -ffreestanding
-# TODO : should -funroll-loops be given?
-
-KERNEL_HW_OBJS += $(P)/div10.o
 KERNEL_HW_OBJS += $(P)/main.o
-KERNEL_HW_OBJS += $(P)/task.o
-KERNEL_HW_OBJS += $(P)/vector.o
-
-KERNEL_SW_OBJS += $(P)/malloc.o
 
 KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/bitmap.o)
 KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/dmd.o)
 KERNEL_ASM_OBJS += $(P)/dot.o
-KERNEL_ASM_OBJS += $(P)/farcall.o
 KERNEL_ASM_OBJS += $(if $(CONFIG_DMD), $(P)/shadow.o)
 KERNEL_ASM_OBJS += $(P)/start.o
-KERNEL_ASM_OBJS += $(P)/task_6809.o
 
 COMMON_BASIC_OBJS += $(if $(CONFIG_PIC), $(P)/math.o)
 
