Numerous changes to get the WPC Sound Platform to build:
- Added CONFIG_BARE option.

- Flagged some game ROM option things that aren't part of the sound ROM build.

- Added first cut at the memory map.

- 6809 farcall now supports the sound ROM bank register.

- Installed vectors and a main function.

- Installed beginning versions of device drivers.

--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -1,5 +1,6 @@
 
 # Root directory for the CPU files.  TODO!
+CPU := m6809
 C := platform/wpc
 
 CFLAGS =
@@ -23,11 +24,12 @@ endif
 CFLAGS += -O2 -fomit-frame-pointer -fstrength-reduce -frerun-loop-opt -Wunknown-pragmas -foptimize-sibling-calls -fstrict-aliasing -fregmove -fgcse-after-reload -fgcse-sm -fgcse-las -ffreestanding
 # TODO : should -funroll-loops be given?
 
-KERNEL_HW_OBJS += $(C)/div10.o
-KERNEL_HW_OBJS += $(C)/task.o
-KERNEL_HW_OBJS += $(C)/vector.o
+# Which version of the 6809 compiler to use.
+GCC_VERSION ?= 4.2.1
 
-KERNEL_SW_OBJS += $(C)/malloc.o
-
+KERNEL_OBJS += $(C)/div10.o
+KERNEL_OBJS += $(C)/task.o
+KERNEL_OBJS += $(C)/vector.o
+KERNEL_OBJS += $(C)/malloc.o
 KERNEL_ASM_OBJS += $(C)/farcall.o
 KERNEL_ASM_OBJS += $(C)/task_6809.o
