--- a/cpu/m6809/Makefile
+++ b/cpu/m6809/Makefile
@@ -1,5 +1,6 @@
 
-# Root directory for the CPU files.  TODO!
+# Root directory for the CPU files.  TODO: move
+# the code to cpu/m6809 and change $(C) accordingly.
 CPU := m6809
 C := platform/wpc
 
@@ -22,6 +23,7 @@ endif
 
 # Optimization flags
 CFLAGS += -O2 -fomit-frame-pointer -fstrength-reduce -frerun-loop-opt -Wunknown-pragmas -foptimize-sibling-calls -fstrict-aliasing -fregmove -fgcse-after-reload -fgcse-sm -fgcse-las -ffreestanding
+CFLAGS += -DCONFIG_BIG_ENDIAN -DHAVE_FASTRAM_ATTRIBUTE
 # TODO : should -funroll-loops be given?
 
 # Which version of the 6809 compiler to use.
