--- a/platform/wpc/Makefile
+++ b/platform/wpc/Makefile
@@ -6,6 +6,8 @@ P := platform/wpc
 
 # Common 6809 configuration
 CPU := m6809
+CONFIG_TASK := y
+CONFIG_MALLOC := y
 include cpu/$(CPU)/Makefile
 
 # Subplatform support
