World Cup: Add attract mode, and many fixes to switch properties.

--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -54,6 +54,6 @@ GAME_TEST_OBJS =
 
 GAME_INCLUDES =
 
-GAME_PAGED_OBJS = goalie_driver.o
+GAME_PAGED_OBJS = goalie_driver.o amode.o
 
 FIF_SRCS += $(M)/soccerball.fif
