WPC tester ROM is no longer defined as 'playable'.  This strips out a lot of game-related code.

--- a/machine/tester/Makefile
+++ b/machine/tester/Makefile
@@ -11,6 +11,8 @@ endif
 
 EXTRA_CFLAGS += -D$(hw)
 
+CONFIG_PLAYABLE := n
+
 # Define the name of the GAME_ROM.  This is
 # optional; you can delete it and a suitable
 # default will be taken.
