Many modularization changes, for building Whitestar.
Whitestar (TSPP) still does not compile yet, but it is much closer.
The goal is to remove all register accesses from the .c files,
and move them into platform-specific functions (e.g. in
include/platform/wpc|whitestar.h).

Changes from 'whitestar' branch is not included here, and will need
to be merged eventually.  The changes were done here since similar
changes were made for sound ROMs, and a basic merge would probably
not be too clean.

Verified that with these changes, TZ and TZ-sound still build OK.

--- a/platform/whitestar/Makefile
+++ b/platform/whitestar/Makefile
@@ -6,6 +6,12 @@ CPU := m6809
 CONFIG_TASK := y
 include cpu/$(CPU)/Makefile
 
+# Subplatform support
+CONFIG_WHITESTAR ?= y
+CONFIG_FONT ?= $(CONFIG_DMD)
+CONFIG_AC ?= n
+CONFIG_ANIMATION ?= $(CONFIG_DMD)
+
 # Additional CFLAGS required on the WPC platform
 CFLAGS += -mdirect -DCONFIG_PLATFORM_WHITESTAR -fno-builtin -DCONFIG_PINMAME -mcode-section=.text -mdata-section=.text -mbss-section=ram
 
