Further changes to get Whitestar to compile.
With this build, most source files compile and the linker runs.
There are plenty of unresolveds, mostly dmd/font stuff that needs
to be written.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -38,7 +38,7 @@ KERNEL_HW_OBJS += kernel/csum.o
 KERNEL_HW_OBJS += $(if $(CONFIG_DMD), kernel/dmd.o)
 KERNEL_HW_OBJS += $(if $(CONFIG_WHITESTAR),,kernel/flip.o)
 KERNEL_HW_OBJS += kernel/freetimer.o
-KERNEL_HW_OBJS += $(if $(CONFIG_WHITESTAR),,kernel/init.o)
+KERNEL_HW_OBJS += kernel/init.o
 KERNEL_HW_OBJS += kernel/lamp.o
 KERNEL_HW_OBJS += kernel/leff.o
 KERNEL_HW_OBJS += kernel/sol.o
