--- a/platform/whitestar/Makefile
+++ b/platform/whitestar/Makefile
@@ -14,6 +14,7 @@ CONFIG_ANIMATION ?= $(CONFIG_DMD)
 
 # Additional CFLAGS required on the WPC platform
 CFLAGS += -mdirect -DCONFIG_PLATFORM_WHITESTAR -fno-builtin -DCONFIG_PINMAME -mcode-section=.text -mdata-section=.text -mbss-section=ram
+EXTRA_ASFLAGS += -DCONFIG_PLATFORM_WHITESTAR
 
 # Don't check format strings, because we define those differently than ANSI C.
 CFLAGS += -Wno-format
