Split score deff into separate file, out of the low-level math functions. The math functions are kept in the fixed page, with the deff now being paged in.

--- a/common/Makefile
+++ b/common/Makefile
@@ -22,6 +22,7 @@ COMMON_BASIC_OBJS +=	common/plunger.o
 COMMON_BASIC_OBJS += common/printer.o
 COMMON_BASIC_OBJS +=	common/reset.o
 COMMON_BASIC_OBJS +=	common/rtc.o
+COMMON_BASIC_OBJS += $(if $(CONFIG_PLAYABLE), common/score_deff.o)
 COMMON_BASIC_OBJS +=	common/service.o
 COMMON_BASIC_OBJS +=	common/tilt.o
 COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/tournament.o)
