Update to the image library:
- Fix build so that "freewpc.h" can be included.
- Link in FreeWPC fonts, so that text can be written at compile-time.
- bitmap_write_ascii() uses different characters for different colors.
- Add buffer_clone()
- Add error checking on pixel draw.
- Add bitmap_draw_ellipse()
- Add bitmap_fill_region()
- Add bitmap_extract_plane()
- Harden binary_fif_read()
- Compression test app now exits and prints status.

--- a/tools/imglib/Makefile
+++ b/tools/imglib/Makefile
@@ -1,4 +1,27 @@
-CFLAGS=-g
-OBJS = imglib.o test.o
-test : $(OBJS)
-	$(CC) -o $@ $(OBJS) -lm
+CC=gcc
+CFLAGS = -g -I../../include -I../../build -DCONFIG_NATIVE -DWPC_DMD_LOW_PAGE=0 -DWPC_DMD_HIGH_PAGE=0
+
+FONT_DIR = ../../fonts
+IMG_OBJS = imglib.o font.o
+FONT_OBJS = mono5.o mono9.o
+FON_OBJS = fixed10.o
+OBJS = $(IMG_OBJS) $(FONT_OBJS) $(FON_OBJS)
+
+PROGS = test_compression genmask
+
+all : $(PROGS)
+
+$(PROGS) : % : $(OBJS) %.o
+	$(CC) -o $@ $^ -lm
+
+$(IMG_OBJS) : %.o : %.c
+	$(CC) $(CFLAGS) -o $@ -c $(FONT_INCLUDES) $^
+
+$(FONT_OBJS) : %.o : $(FONT_DIR)/%.c
+	$(CC) $(CFLAGS) -o $@ -c $(FONT_INCLUDES) $^
+
+$(FON_OBJS) : %.o : $(FONT_DIR)/%.fon
+	$(CC) $(CFLAGS) -o $@ -x c -c $(FONT_INCLUDES) $^
+
+clean:
+	rm -f $(OBJS)
