--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -54,6 +54,6 @@ GAME_TEST_OBJS =
 
 GAME_INCLUDES =
 
-GAME_PAGED_OBJS = goalie_driver.o amode.o
+GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o shot.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
