First changes that produce compilable templates:
- Teach genmachine how to parse template info.
- Remove the drivers/Makefile; it is not needed
- Add ontime/off parameters to sling driver
- Protect class headers with a guard.
- Definitions in class header should be prefixed with @class.
- Expand functionality of the sling service procedure.
- Add template entries to WCS machine config
- Add sling functions to WCS scheduler
- Add sling headers to WCS schedule program parameters
- Ignore '@@' lines in template files.

--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -38,6 +38,8 @@ ROM_PAGE_COUNT = 32
 
 MACHINE_FILE = wcs.md
 
+MACHINE_SCHEDULE := $(M)/wcs.sched
+
 PINMAME_MACHINE = wcs_l2
 
 PINMAME_GAME_ROM = wcup_lx2.rom
@@ -57,3 +59,5 @@ GAME_INCLUDES =
 GAME_PAGED_OBJS = goalie_driver.o amode.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
+
+MACHINE_SCHED_FLAGS += -i sling0.h -i sling1.h
