- Headers included by a schedule are now included as its dependencies,   so the scheduler is recompiled whenever the headers change. - The sling driver actually works now! - Changed on/off timings for slings and jets on WCS, to avoid rapid   fire. - Added WCS pity score of 2500 for any valid playfield switch.

--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -60,4 +60,4 @@ GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o shot.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
-MACHINE_SCHED_FLAGS += -i sling0.h -i sling1.h -i sling2.h -i sling3.h -i sling4.h
+SCHED_HEADERS += build/sling0.h build/sling1.h build/sling2.h build/sling3.h build/sling4.h
