--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -60,4 +60,4 @@ GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o shot.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
 
-SCHED_HEADERS += build/sling0.h build/sling1.h build/sling2.h build/sling3.h build/sling4.h build/spinner0.h
+SCHED_HEADERS += build/spsol0.h build/spsol1.h build/spsol2.h build/spsol3.h build/spsol4.h build/spinner0.h
