Initial rules for WCS matches.

--- a/machine/wcs/Makefile
+++ b/machine/wcs/Makefile
@@ -55,6 +55,6 @@ GAME_TEST_OBJS =
 GAME_INCLUDES =
 
 GAME_PAGED_OBJS = goalie_driver.o amode.o pitypoints.o \
-	shot.o lock.o
+	shot.o lock.o match.o
 
 FIF_SRCS += $(M)/soccerball.fif $(M)/striker.fif $(M)/pgj.fif
