Add ASCII-DMD support to native mode.

--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -16,12 +16,18 @@ HOST_LFLAGS += -pg
 HOST_LIBS += -lpth
 
 # Additional object files to be linked into the kernel region
-KERNEL_OBJS += $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o $(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o
+KERNEL_OBJS += $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o \
+	$(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o $(D)/asciidmd.o
+
+$(D)/asciidmd.o : CFLAGS += -Itools/imglib
 
 # When using the curses UI (default for now)
 CFLAGS += -DCONFIG_UI -DCURSES
 HOST_LIBS += -lncurses
 KERNEL_OBJS += $(D)/ui_curses.o
+
+# For ASCII DMD
+KERNEL_OBJS += tools/imglib/imglib.o
 
 CFLAGS += -DMACHINE_SHORTNAME=\"$(MACHINE)\"
 
