Fix effect for reporting diagnostic errors.

--- a/common/Makefile
+++ b/common/Makefile
@@ -11,7 +11,6 @@ COMMON_BASIC_OBJS +=	$(if $(CONFIG_PLAYABLE), common/ballsave.o)
 COMMON_BASIC_OBJS +=	common/coin.o
 COMMON_BASIC_OBJS +=	common/db.o
 COMMON_BASIC_OBJS +=	common/event-audit.o
-COMMON_BASIC_OBJS +=	common/flash.o
 COMMON_BASIC_OBJS +=	common/flipcode.o
 COMMON_BASIC_OBJS +=	common/initials.o
 COMMON_BASIC_OBJS +=	common/leffs.o
@@ -62,4 +61,5 @@ TRANS_OBJS += $(if $(CONFIG_DMD), common/dmd_shadow.o)
 # Effect objects contain common display and lamp effects, and are
 # separated out for the same reason.
 EFFECT_OBJS += $(if $(CONFIG_DMD), common/effect.o)
+EFFECT_OBJS +=	common/flash.o
 EFFECT_OBJS += $(if $(CONFIG_PLAYABLE), common/sound_effect.o)
