--- a/platform/native/Makefile
+++ b/platform/native/Makefile
@@ -17,7 +17,8 @@ HOST_LIBS += -lpth
 
 # Additional object files to be linked into the kernel region
 KERNEL_OBJS += $(D)/main.o $(D)/switch.o $(D)/task.o $(D)/section.o \
-	$(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o $(D)/asciidmd.o
+	$(D)/timing.o $(D)/watchdog.o $(D)/zerocross.o $(D)/asciidmd.o \
+	$(D)/ball.o $(D)/signal.o
 
 $(D)/asciidmd.o : CFLAGS += -Itools/imglib
 
